--- a/purchase_pricelist/views/product_pricelist_view.xml
+++ b/purchase_pricelist/views/product_pricelist_view.xml
@@ -12,12 +12,16 @@
                 <attribute name="attrs">{'invisible':[('used_for','=','purchase'),('on_order','=',True)]}</attribute>
             </xpath>
             <xpath expr="//field[@name='item_ids']" position="after">
-                <p class="text-danger" attrs="{'invisible':['|',('used_for','=','sale'),('on_order','=',False)]}">Set quantity in descending order lines</p>
+                <group>
+                    <field name="apply_on" class="oe_inline" widget="radio" attrs="{'invisible':['|',('used_for','!=','purchase'),('on_order','!=',True)]}"/>
+                </group>
+                <!--                <p class="text-danger" attrs="{'invisible':['|',('used_for','=','sale'),('on_order','=',False)]}">Set quantity in descending order lines</p>-->
                 <field name="product_pricelist_order_ids" attrs="{'invisible':['|',('used_for','=','sale'),('on_order','=',False)]}">
                     <tree editable="bottom">
                         <field name="pricelist_id" invisible="1"/>
                         <field name="sequence" widget="handle"/>
-                        <field name="order_amount"/>
+                        <field name="from_value"/>
+                        <field name="to_value"/>
                         <field name="discount"/>
                     </tree>
                 </field>
