[IMP]Chanage label of cover price from price and other label

--- a/purchase_pricelist/views/product_supplierinfo_view.xml
+++ b/purchase_pricelist/views/product_supplierinfo_view.xml
@@ -4,8 +4,11 @@
         <field name="model">product.supplierinfo</field>
         <field name="inherit_id" ref="product.product_supplierinfo_form_view" />
         <field name="arch" type="xml">
-            <xpath expr="//div[field[@name='price']]" position="after">
+            <xpath expr="//field[@name='price']" position="after">
                 <field name="vendor_pricelist_id" options="{'no_create':1}" domain="[('used_for','=','purchase')]"/>
+            </xpath>
+            <xpath expr="//field[@name='price']" position="attributes">
+                <attribute name="string">Cover Price</attribute>
             </xpath>
         </field>
     </record>
@@ -16,6 +19,9 @@
             <field name="price" position="after">
                 <field name="vendor_pricelist_id" options="{'no_create':1}" domain="[('used_for','=','purchase'),('on_order','!=',True)]"/>
             </field>
+            <xpath expr="//field[@name='price']" position="attributes">
+                <attribute name="string">Cover Price</attribute>
+            </xpath>
         </field>
     </record>
 </odoo>
