--- a/purchase_pricelist/views/product_pricelist_view.xml
+++ b/purchase_pricelist/views/product_pricelist_view.xml
@@ -13,7 +13,9 @@
             </xpath>
             <xpath expr="//field[@name='item_ids']" position="after">
                 <group>
-                    <field name="apply_on" class="oe_inline" widget="radio" attrs="{'invisible':['|',('used_for','!=','purchase'),('on_order','!=',True)]}"/>
+                    <group>
+                        <field name="apply_on"  attrs="{'invisible':['|',('used_for','!=','purchase'),('on_order','!=',True)]}"/>
+                    </group>
                 </group>
                 <!--                <p class="text-danger" attrs="{'invisible':['|',('used_for','=','sale'),('on_order','=',False)]}">Set quantity in descending order lines</p>-->
                 <field name="product_pricelist_order_ids" attrs="{'invisible':['|',('used_for','=','sale'),('on_order','=',False)]}">
