--- a/bista_purchase/report/purchase.xml
+++ b/bista_purchase/report/purchase.xml
@@ -206,7 +206,7 @@
             <td style="border-right: 1px solid black;">Subtotal</td>
         </xpath>
 
-        <xpath expr="//tr[hasclass('o_subtotal')]" position="before">
+        <xpath expr="//t[@t-as='subtotal']" position="before">
 <!--            <t t-if="'groups_by_subtotal' in tax_totals and len(tax_totals['groups_by_subtotal']) == 0">-->
 <!--                <tr>-->
 <!--                    <td>-->
@@ -245,9 +245,9 @@
         </xpath>
 
     </template>
-<!--     <template id="tax_groups_totals_extended" inherit_id="account.tax_groups_totals">-->
-<!--         <xpath expr="//t[@t-else='']//td[2]" position="replace">-->
-<!--             <td class="text-right "></td>-->
-<!--         </xpath>-->
-<!--     </template>-->
+     <template id="tax_groups_totals_extended" inherit_id="account.tax_groups_totals">
+         <xpath expr="//t[@t-else='']//td[2]" position="attributes">
+             <attribute name="class">text-right o_price_total bg-light</attribute>
+         </xpath>
+     </template>
 </odoo>
