--- a/bista_purchase/report/purchase.xml
+++ b/bista_purchase/report/purchase.xml
@@ -37,10 +37,30 @@
                     <br/>
                 </t>
                 <t t-if="o.state not in ['draft','sent']">
-                    <strong>Order Date:</strong>
+                    <strong>Order Arrive By Date:</strong>
                     <t t-esc="o.date_approve" t-options='{"widget": "date"}'/>
                     <br/>
                 </t>
+
+                <strong>BookPal Account # :</strong>
+                <t t-esc="428475"/>
+                <br/>
+                <t t-if="o.payment_term_id">
+                    <strong>Supplier Terms :</strong>
+                    <t t-esc="o.payment_term_id.name"/>
+                    <br/>
+                </t>
+
+                <strong>Shipping Method :</strong>
+                <span>Ground</span>
+                <br/>
+                <t t-if="o.shipping_instructions">
+                    <strong>Shipping Instructions :</strong>
+                    <t t-esc="o.shipping_instructions"/>
+                    <br/>
+                </t>
+                <!--                <br/>-->
+
                 <strong>Salesperson:</strong>
                 <t t-esc="o.user_id.name"/>
                 <br/>
@@ -58,7 +78,7 @@
         <xpath expr="//h2[last()]" position="replace">
         </xpath>
         <xpath expr="//table[hasclass('table', 'table-sm', 'o_main_table')]" position="attributes">
-            <attribute name="style">margin-bottom: 0px;</attribute>
+            <attribute name="style">margin-bottom: 5px;</attribute>
         </xpath>
         <!-- Hidden information block from base report  -->
         <xpath expr="//div[@id='informations']" position="replace">
@@ -98,7 +118,7 @@
                     <th name="th_default_code" class="text-center">
                         <strong>ISBN</strong>
                     </th>
-                    <th name="th_description" class="text-cente">
+                    <th name="th_description" class="text-center">
                         <strong>Description</strong>
                     </th>
                     <th name="th_format" class="text-center">
@@ -189,20 +209,33 @@
             </div>
 
         </xpath>
+        <!--        <xpath expr="//p[@t-field='o.notes']" position="replace">-->
+        <!--            <t t-if="o.notes != '&lt;p&gt;&lt;br&gt;&lt;/p&gt;'">-->
+        <!--                <div class='row mt-5'>-->
+        <!--                    <div class="col-12 mb8" style="margin-left: 15px;">-->
+        <!--                        <strong>Purchase Order Terms and-->
+        <!--                            Conditions-->
+        <!--                        </strong>-->
+        <!--                    </div>-->
+        <!--                </div>-->
+        <!--                <div class="mx-4 mt-0">-->
+        <!--                    <p t-field="o.notes"/>-->
+        <!--                </div>-->
+        <!--            </t>-->
+        <!--        </xpath>-->
         <xpath expr="//p[@t-field='o.notes']" position="replace">
-            <t t-if="o.notes != '&lt;p&gt;&lt;br&gt;&lt;/p&gt;'">
-                <div class='row mt-5'>
-                    <div class="col-12" style="margin-left: 15px;">
-                        <strong >Purchase Order Terms and
-                            Conditions
-                        </strong>
-                    </div>
-                </div>
-                <div class="mx-5 mt-0">
-                    <p t-field="o.notes"/>
-                </div>
-            </t>
+            <div class="mt-5 mx-3" t-if="o.notes">
+                <strong >Purchase Order Terms and
+                    Conditions
+                </strong>
+                <!--                    <hr class="mt-0 mb-1"/>-->
+                <p class="mb-1" t-field="o.notes" style="margin-left: 50px;"/>
+            </div>
+<!--            <div class="mx-4 mt-0">-->
+<!--                <p t-field="o.notes"/>-->
+<!--            </div>-->
         </xpath>
+
     </template>
     <template id="report_purchaseorder_document_extended2" inherit_id="purchase_stock.report_purchaseorder_document">
         <xpath expr="//t[@t-else='']" position="replace">
@@ -224,17 +257,7 @@
         </xpath>
 
         <xpath expr="//t[@t-as='subtotal']" position="before">
-            <!--            <t t-if="'groups_by_subtotal' in tax_totals and len(tax_totals['groups_by_subtotal']) == 0">-->
-            <!--                <tr>-->
-            <!--                    <td>-->
-            <!--                        <strong>Subtotal</strong>-->
-            <!--                    </td>-->
-            <!--                    <td class="text-right">-->
-            <!--                        <span t-esc="0.0"/>-->
-            <!--&lt;!&ndash;                        <span t-esc="tax_totals"/>&ndash;&gt;-->
-            <!--                    </td>-->
-            <!--                </tr>-->
-            <!--            </t>-->
+
             <tr class="border-black o_subtotal">
                 <td>
                     <span>Without Disc Total</span>
@@ -251,18 +274,43 @@
                     <span t-field="o.total_discount_amount"/>
                 </td>
             </tr>
-            <!--            <tr>-->
-            <!--                <td>-->
-            <!--                    <strong>Shipping</strong>-->
-            <!--                </td>-->
-            <!--                <td class="text-right">-->
-            <!--                    <span t-esc="20"/>-->
-            <!--                </td>-->
-            <!--            </tr>-->
+            <t t-if="'groups_by_subtotal' in tax_totals and len(tax_totals['groups_by_subtotal']) == 0">
+                <tr class="border-black o_subtotal">
+                    <td>
+                        <span>Subtotal</span>
+                    </td>
+                    <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
+                        $
+                        <span t-esc="0.0"/>
+                        <!--                        <span t-esc="tax_totals"/>-->
+                    </td>
+                </tr>
+                <tr class="border-black o_subtotal">
+                    <td>
+                        <span>Tax</span>
+                    </td>
+                    <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
+                        $
+                        <span t-esc="0.0"/>
+                        <!--                        <span t-esc="tax_totals"/>-->
+                    </td>
+                </tr>
+            </t>
         </xpath>
-        <!--        <xpath expr="//t[@t-as='total']" position="after">-->
-        <!--            <span>DO NOT PROCESS IF PRICES ARE INCORRECT </span>-->
-        <!--        </xpath>-->
+        <xpath expr="//tr[hasclass('o_total')]" position="before">
+            <tr class="border-black o_subtotal">
+                <td>
+                    <span>Shipping</span>
+                </td>
+                <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
+                    <div>
+                        $
+                        <span t-esc="0.0"/>
+
+                    </div>
+                </td>
+            </tr>
+        </xpath>
 
     </template>
     <template id="tax_groups_totals_extended" inherit_id="account.tax_groups_totals">
