--- a/bista_purchase/report/purchase_quotation_templates.xml
+++ b/bista_purchase/report/purchase_quotation_templates.xml
@@ -5,6 +5,10 @@
         <xpath expr="//h2" position="attributes">
             <attribute name="style">margin-top: 15px;</attribute>
         </xpath>
+                <xpath expr="//table[hasclass('table', 'table-sm')]" position="attributes">
+            <attribute name="style">margin-top: 10px;</attribute>
+        </xpath>
+
         <xpath expr="//h2" position="replace">
         </xpath>
         <xpath expr="//th[@name='th_expected_date']" position="replace">
@@ -14,17 +18,43 @@
                 <strong>UOM</strong>
             </th>
         </xpath>
+        <xpath expr="//th[@name='th_uom']" position="after">
+            <th name="th_cover" class="text-center">
+                <strong>Cover</strong>
+            </th>
+        </xpath>
+        <xpath expr="//th[@name='th_cover']" position="after">
+            <th name="th_Discount" class="text-center">
+                <strong>Discount</strong>
+            </th>
+        </xpath>
+        <xpath expr="//th[@name='th_Discount']" position="after">
+            <th name="th_bp_price" class="text-center">
+                <strong>BP Price</strong>
+            </th>
+        </xpath>
+        <xpath expr="//th[@name='th_bp_price']" position="after">
+            <th name="th_total" class="text-center">
+                <strong>Total</strong>
+            </th>
+        </xpath>
         <xpath expr="//th[@name='th_quantity']" position="attributes">
             <attribute name="class">text-center</attribute>
         </xpath>
-        <xpath expr="//th[@name='th_uom']" position="before">
+        <xpath expr="//th[@name='th_quantity']" position="before">
             <th name="th_format" class="text-center">
                 <strong>Format</strong>
             </th>
         </xpath>
+
         <xpath expr="//t[@t-if='not order_line.display_type']/td[2]" position="replace">
         </xpath>
         <xpath expr="//td[hasclass('text-right')]" position="replace">
+
+            <td class="text-center" name="td_format">
+                <t t-set="format" t-value="MMP"/>
+                <span>MMP</span>
+            </td>
             <td class="text-center">
                 <span t-if="float(order_line.product_qty).is_integer()"
                       t-esc="int(order_line.product_qty)"/>
@@ -33,6 +63,22 @@
             </td>
             <td class="text-center">
                 <span t-field="order_line.product_uom" groups="uom.group_uom"/>
+            </td>
+            <td class="text-center" name="td_price_unit">
+                <span t-field="order_line.price_unit"/>
+            </td>
+            <td class="text-center" name="td_discount">
+                <div>
+                    <span t-field="order_line.discount"/>%
+                </div>
+            </td>
+            <td class="text-center" name="td_bp_price">
+                <div>
+                    <span t-field="order_line.disc_price_unit"/>
+                </div>
+            </td>
+            <td class="text-center bg-light" name="td_total">
+                <span t-field="order_line.price_subtotal"/>
             </td>
         </xpath>
         <xpath expr="//t[@t-set='address']/div" position="before">
@@ -74,6 +120,67 @@
                     </div>
                 </t>
             </t>
+        </xpath>
+    </template>
+
+    <template id="document_tax_totals_extended" inherit_id="account.document_tax_totals">
+        <xpath expr="//td[1]" position="replace">
+            <td style="border-right: 1px solid black;">Subtotal</td>
+        </xpath>
+
+        <xpath expr="//t[@t-as='subtotal']" position="before">
+
+            <tr class="border-black o_subtotal">
+                <td>
+                    <span>Without Disc Total</span>
+                </td>
+                <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
+                    <span t-field="o.without_disc_amount_untaxed"/>
+                </td>
+            </tr>
+            <tr class="border-black o_subtotal">
+                <td>
+                    <span>Discount</span>
+                </td>
+                <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
+                    <span t-field="o.total_discount_amount"/>
+                </td>
+            </tr>
+            <t t-if="'groups_by_subtotal' in tax_totals and len(tax_totals['groups_by_subtotal']) == 0">
+                <tr class="border-black o_subtotal">
+                    <td>
+                        <span>Subtotal</span>
+                    </td>
+                    <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
+                        $
+                        <span t-esc="0.0"/>
+                        <!--                        <span t-esc="tax_totals"/>-->
+                    </td>
+                </tr>
+                <tr class="border-black o_subtotal">
+                    <td>
+                        <span>Tax</span>
+                    </td>
+                    <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
+                        $
+                        <span t-esc="0.0"/>
+                        <!--                        <span t-esc="tax_totals"/>-->
+                    </td>
+                </tr>
+            </t>
+        </xpath>
+        <xpath expr="//tr[hasclass('o_total')]" position="before">
+            <tr class="border-black o_subtotal">
+                <td>
+                    <span>Shipping</span>
+                </td>
+                <td class="text-right" style="border-left: 1px solid black; margin-right: 5px;">
+                    <div>
+                        $
+                        <span t-esc="0.0"/>
+                    </div>
+                </td>
+            </tr>
         </xpath>
     </template>
 </odoo>
