--- a/bista_purchase/report/report_templates.xml
+++ b/bista_purchase/report/report_templates.xml
@@ -75,13 +75,13 @@
             </t>
         </xpath>
         <xpath expr="//div[@t-attf-class='footer o_boxed_footer o_company_#{company.id}_layout']" position="replace">
-            <t t-if="doc_model == 'purchase.order'and xmlid == 'purchase.report_purchaseorder'">
-                <div t-attf-class="footer o_company_#{company.id}_layout">
+            <t t-if="doc_model == 'purchase.order'and xmlid == 'purchase.report_purchaseorder' ">
+                <div t-attf-class="footer o_company_#{company.id}_layout" >
 
-                    <div class="text-center" style="border-top: 3px solid black;">
+                    <div class="text-center last-page">
 
                         <!--                        <div t-field="company.report_footer"/>-->
-                        <div class="mb-5">
+                        <div class="mb-0" style="margin-bottom: 0px;">
                             <span t-field="res_company.partner_id.name" style="margin-left: 15px; margin-right: 15px;"/>
                             |
                             <span t-field="res_company.partner_id.street" style="margin-left: 15px; margin-right: 15px;"/>
