--- a/bista_purchase/report/report_templates.xml
+++ b/bista_purchase/report/report_templates.xml
@@ -9,13 +9,13 @@
                         <div class="col-6">
 
                             <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" alt="Logo"/>
-                            <div  t-field="o.company_id.partner_id"
+                            <div t-field="o.company_id.partner_id"
                                  t-options='{"widget": "contact", "fields": ["address", "name"], "no_marker": true}'/>
 
                         </div>
                         <div t-if="xmlid == 'purchase.report_purchaseorder'" name="report_info"
                              class="col-6 text-right mb4">
-<!--                            <h3 t-if="o.state in []">Request for Quotation</h3>-->
+                            <!--                            <h3 t-if="o.state in []">Request for Quotation</h3>-->
                             <h3 t-if="o.state in ['draft','sent','purchase','done']">Purchase Order</h3>
                             <h3 t-if="o.state == 'cancel'">Cancelled Purchase Quotation/Order</h3>
                             <h4>
@@ -34,7 +34,7 @@
                         <div t-if="xmlid == 'purchase.report_purchasequotation'" name="report_info"
                              class="col-6 text-right mb4">
                             <h3 t-if="o.state in ['draft','sent','purchase','done']">Request for Quotation</h3>
-<!--                            <h3 t-if="o.state in []">Purchase Order</h3>-->
+                            <!--                            <h3 t-if="o.state in []">Purchase Order</h3>-->
                             <h3 t-if="o.state == 'cancel'">Cancelled Purchase Quotation/Order</h3>
                             <h4>
                                 <strong>
@@ -61,7 +61,7 @@
             <t t-elif="doc_model == 'sale.order'">
                 <div class="o_boxed_header">
                     <div class="row mb8">
-                         <div class="col-6">
+                        <div class="col-6">
 
                             <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" alt="Logo"/>
                             <div style="top-margin:50px; margin-bottom:10px;" t-field="o.company_id.partner_id"
@@ -80,7 +80,7 @@
                                 </strong>
                             </h4>
                             <strong t-if="doc.state in ['sale','done']">Order Date:
-<!--                                <t t-esc="o.date_order" t-options='{"widget": "date"}'/> -->
+                                <!--                                <t t-esc="o.date_order" t-options='{"widget": "date"}'/> -->
                                 <span t-esc="datetime.datetime.now()" t-options='{"widget": "date"}'></span>
                             </strong>
 
@@ -103,7 +103,8 @@
                             <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" alt="Logo"/>
                             <!-- <h4 class="mt0" t-field="company.report_header"/> -->
                             <div name="company_address" class="mb4" style="font-size: 15px; margin-bottom:10px;">
-                                <span style="margin-bottom:10px;" t-if="company.company_details" t-field="company.company_details"/>
+                                <span style="margin-bottom:10px;" t-if="company.company_details"
+                                      t-field="company.company_details"/>
                             </div>
                         </div>
                         <div name="report_info" class="col-6 text-right mb4">
@@ -114,31 +115,49 @@
             </t>
         </xpath>
         <xpath expr="//div[@t-attf-class='footer o_boxed_footer o_company_#{company.id}_layout']" position="replace">
-            <t t-if="not o" t-set="o" t-value="doc"/>
-            <t t-if="doc_model in ['sale.order','purchase.order']">
+            <t t-if="doc_model == 'purchase.order'and xmlid == 'purchase.report_purchaseorder' ">
                 <div t-attf-class="footer o_company_#{company.id}_layout">
-                    <div class="text-center" style="border-top: 3px solid black; text-color: black;">
-                        <!--                        <div t-field="company.report_footer" style="font-size: 90%; text-color: black;"/>-->
-                        <!--                        <div t-if="report_type == 'pdf'">-->
 
+                    <div class="text-center last-page">
+
+                        <!--                        <div t-field="company.report_footer"/>-->
+                        <div class="mb-0" style="margin-bottom: 0px;">
+                            <span t-field="res_company.partner_id.name" style="margin-left: 15px; margin-right: 15px;"/>
+                            |
+                            <span t-field="res_company.partner_id.street"
+                                  style="margin-left: 15px; margin-right: 15px;"/>
+                            |
+                            <span t-field="res_company.partner_id.phone"
+                                  style="margin-left: 15px; margin-right: 15px;"/>
+                            |
+                            <span t-field="res_company.partner_id.city" style="margin-left: 15px; margin-right: 15px;"/>
+                            |
+                            <span t-field="res_company.partner_id.website"
+                                  style="margin-left: 15px; margin-right: 15px;"/>
+                        </div>
+                        <!--                        <div t-if="report_type == 'pdf'">-->
                         <!--                            Page: <span class="page"/> / <span class="topage"/>-->
                         <!--                        </div>-->
-                        <div  t-if="report_type == 'pdf'">
-                            <span  t-field="res_company.partner_id.name"/>
-                            <span style="margin-right: 15px;" t-field="res_company.partner_id.street"/>
+                    </div>
+                </div>
+            </t>
+            <t t-else="">
+                <div t-attf-class="footer o_company_#{company.id}_layout">
+                    <div class="text-center last-page">
+                        <div class="mb-0" style="margin-bottom: 0px;">
+                            <span t-field="res_company.partner_id.name" style="margin-left: 15px; margin-right: 15px;"/>
                             |
-                            <span style="margin-left: 15px;" t-field="res_company.partner_id.city"/>
-                            <span t-field="res_company.partner_id.state_id"/>
-                            <span style="margin-right: 15px;" t-field="res_company.partner_id.zip"/>
+                            <span t-field="res_company.partner_id.street"
+                                  style="margin-left: 15px; margin-right: 15px;"/>
+                            |
+                            <span t-field="res_company.partner_id.phone"
+                                  style="margin-left: 15px; margin-right: 15px;"/>
                             |
                             <span style="margin-left: 15px;margin-right: 15px;" t-field="res_company.partner_id.phone"/>
                             |
-                            <span style="margin-left: 15px;" t-field="res_company.partner_id.website"/>
-
+                            <span t-field="res_company.partner_id.website"
+                                  style="margin-left: 15px; margin-right: 15px;"/>
                         </div>
-<!--                        <div t-if="report_type == 'pdf'">-->
-<!--                            Page: <span class="page"/> / <span class="topage"/>-->
-<!--                        </div>-->
                     </div>
                 </div>
             </t>
